--- a/OrganizzeClone/app/src/main/res/values/themes.xml
+++ b/OrganizzeClone/app/src/main/res/values/themes.xml
@@ -1,17 +1,40 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.OrganizzeClone" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
+
+        <!-- Secondary brand color. -->
+        <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
         <!-- Customize your theme here. -->
+    </style>
+
+
+    <!-- Tema aplicado nas Despesas -->
+    <style name="despesasTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/purple_500D</item>
+        <item name="colorAccent">@color/purple_200D</item>
+        <item name="colorPrimaryDark">@color/purple_700D</item>
+    </style>
+
+    <!-- Tema aplicado nas Receitas -->
+    <style name="receitasTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/purple_500R</item>
+        <item name="colorAccent">@color/purple_200R</item>
+        <item name="colorPrimaryDark">@color/purple_700R</item>
     </style>
 
     <style name="Theme.OrganizzeClone.NoActionBar">
