--- a/OrganizzeClone/app/src/main/res/layout/activity_receitas.xml
+++ b/OrganizzeClone/app/src/main/res/layout/activity_receitas.xml
@@ -104,6 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:onClick="salvarReceitas"
         android:src="@drawable/ic_baseline_check_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
