--- a/OrganizzeClone/app/src/main/res/layout/adapter_movimentacao.xml
+++ b/OrganizzeClone/app/src/main/res/layout/adapter_movimentacao.xml
@@ -3,14 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/card_movimentacao"
     android:elevation="3dp"
+    android:clickable="true"
+    android:focusable="true"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
